<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#455a64"
    tools:context=".activity_login">


    <androidx.cardview.widget.CardView
        android:layout_width="371dp"
        android:layout_height="600dp"
        android:elevation="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/user"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edtext_bg"
                android:ems="10"
                android:hint="@string/usuario_label"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <EditText
                android:id="@+id/mail"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/edtext_bg"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                app:layout_constraintEnd_toEndOf="@+id/user"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/user"
                app:layout_constraintTop_toBottomOf="@+id/user" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:text="@string/login"
                android:textColor="@color/DarkBlue"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/recuperar"
                android:layout_width="280dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/DarkBlue"
                android:elevation="6dp"
                android:text="@string/login"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonM"
                app:layout_constraintEnd_toEndOf="@+id/mail"
                app:layout_constraintStart_toStartOf="@+id/mail"
                app:layout_constraintTop_toBottomOf="@+id/mail" />

            <Button
                android:id="@+id/buttonM"
                android:layout_width="280dp"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/DarkBlue"
                android:text="@string/registro"
                android:elevation="6dp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="@+id/recuperar"
                app:layout_constraintStart_toStartOf="@+id/recuperar"
                app:layout_constraintTop_toBottomOf="@+id/recuperar" />

            <Button
                android:id="@+id/button3"
                android:layout_width="280dp"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/DarkBlue"
                android:text="@string/olvcontraseña"
                android:elevation="6dp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonM"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/buttonM"
                app:layout_constraintTop_toBottomOf="@+id/buttonM" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="125dp"
                android:layout_height="132dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/morsepng" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:text="@string/usuario_label"
                app:layout_constraintBottom_toTopOf="@+id/user"
                app:layout_constraintEnd_toEndOf="@+id/user"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/user"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/password_label"
                app:layout_constraintBottom_toTopOf="@+id/mail"
                app:layout_constraintEnd_toEndOf="@+id/mail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/mail"
                app:layout_constraintTop_toBottomOf="@+id/user" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>